Add UUID generator